--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,13 @@
-source.. = src/, \
-					 test/
+source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml
+               contexts.xml,\
+               libraries/jackson-annotations-2.8.3.jar,\
+               libraries/jackson-core-2.8.3.jar,\
+               libraries/jackson-databind-2.8.3.jar
+source.libraries/jackson-annotations-2.8.3.jar = src/
+source.libraries/jackson-core-2.8.3.jar = src/
+source.libraries/jackson-databind-2.8.3.jar = src/
