--- a/plugin.xml
+++ b/plugin.xml
@@ -5,15 +5,15 @@
    <extension
          point="org.eclipse.ui.views">
       <category
-            name="Sample Category"
+            name="Integrations"
             id="TrelloGitIntegration">
       </category>
       <view
-            name="Sample View"
+            name="GitHub Trello Integration"
             icon="icons/sample.gif"
             category="TrelloGitIntegration"
-            class="trellogitintegration.views.SampleView"
-            id="trellogitintegration.views.SampleView">
+            class="trellogitintegration.views.PluginView"
+            id="trellogitintegration.views.PluginView">
       </view>
    </extension>
    <extension
@@ -24,7 +24,7 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.ProblemView"
                relationship="right"
-               id="trellogitintegration.views.SampleView">
+               id="trellogitintegration.views.PluginView">
          </view>
       </perspectiveExtension>
    </extension>
