--- a/.classpath
+++ b/.classpath
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/trello4j">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="trello4j/target"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/trello4j/Trello4java.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-annotations-2.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-core-2.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-databind-2.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-annotations-2.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-core-2.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Leon/Downloads/TrelloGitHubIntegration-master/libraries/jackson-databind-2.8.3.jar"/>
 	<classpathentry kind="lib" path="libraries/com.fasterxml.jackson.core.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Leon/Downloads/trello-java-wrapper-0.3-sources.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/trello-java-wrapper"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
